...
    <string name="brace_date_invalid">Enter a valid date</string>
    <string name="brace_date_out_of_range">Date is unavailable</string>
    <string name="brace_date_calendar_title">Choose date</string>
    <string name="brace_time_hour_12">Hour, 12-hour</string>
    <string name="brace_time_hour_24">Hour, 24-hour</string>
    <string name="brace_time_minute">Minute</string>
    <string name="brace_time_second">Second</string>
    <string name="brace_time_millisecond">Millisecond</string>
    <string name="brace_time_period">Day period</string>
    <string name="brace_time_increase">Increase %1$s</string>
    <string name="brace_time_decrease">Decrease %1$s</string>
    <string name="brace_time_switch_period">Switch to %1$s</string>
    <string name="brace_time_open">Open time picker for %1$s</string>
...
